--- a/src/components/MatchDetails/MatchDetails.scss
+++ b/src/components/MatchDetails/MatchDetails.scss
@@ -8,7 +8,7 @@ $color_select: #FF0035;
     //display: none;
     position: relative;
     top: 0;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
     grid-column: 1 / span 7;
     width: 100%;
     height: 0rem;
@@ -82,6 +82,8 @@ $color_select: #FF0035;
     border-bottom: 1px solid #0E131F65;
     margin-bottom: 0.2rem;
     place-items: center;
+    padding: 0.1rem;
+    gap: 0.2rem;
 
     &__minute {
         width: 2rem;
@@ -100,6 +102,9 @@ $color_select: #FF0035;
         width: 2rem;
         height: 2rem;
         grid-column: 2 / 3;
+        background-color: #acbf65;
+        border-radius: 50%;
+        border: 1px solid #daf7fc;
 
     }
 
@@ -214,17 +219,23 @@ $color_select: #FF0035;
 }
 
 .substitutes {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    gap: 0.2rem;
     font-size: 0.7rem;
+    border-bottom: 1px solid #183c4d;
+    background-color: #d1d1d115;
+    padding: 0.1rem;
+    width: 100%;
 
     &__jersey {
         display: flex;
         position: relative;
         grid-column: 1 / 2;
         grid-row: 1 / span 2;
-        width: 3rem;
-        height: 3rem;
+        width: 2.7rem;
+        height: 2.7rem;
         border-radius: 50%;
         text-align: center;
         z-index: 1;
@@ -246,7 +257,7 @@ $color_select: #FF0035;
     &__name {
         grid-row: 1 / 2;
         grid-column: 2 / 3;
-        font-size: 0.8rem;
+        font-size: 0.75rem;
     }
 
     &__position {
@@ -254,7 +265,57 @@ $color_select: #FF0035;
         grid-column: 2 / 3;
         font-size: 0.55rem;
         color: #eed963;
-        font-size: 0.6rem;
+        font-size: 0.55rem;
+    }
+
+    &__card {
+        position: absolute;
+        top:  0.1rem;
+        left: 0.1rem;
+        z-index: 3;
+
+    }
+
+    &__change {
+        position: absolute;
+        width: 1rem;
+        left: 1.5rem;
+        top: 0.1rem;
+        border-radius: 50%;
+        background-color: #e0d9d9;
+        border: 1px solid #00000088;
+        z-index: 3;
+    }
+
+    &__goal {
+        position: absolute;
+        width: 1rem;
+        bottom: 0.1rem;
+        left: 0.1rem;
+        z-index: 3;
+    }
+
+    &__goals {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        left: 0rem;
+        bottom: 0.7rem;
+        width: 0.8rem;
+        height: 0.8rem;
+        text-align: center;
+        font-size: 0.9rem;
+        border-radius: 50%;
+        background-color: #108499;
+        border: 1px solid #dfe0e0;
+        z-index: 3;
+
+        &--number {
+            position: absolute;
+            top: -0.4rem;
+            font-weight: 600;
+        }
     }
 }
 
@@ -264,6 +325,7 @@ $color_select: #FF0035;
 }
 
 .field {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
@@ -286,16 +348,17 @@ $color_select: #FF0035;
         grid-template-rows: repeat(4, 1fr);
         width: 100%;
         height: 100%;
-        
+
     }
 
-    &__home{
+    &__home {
         grid-row: 1 / 2;
-        background-color: #e7181811;
+        background-color: #e7181800;
     }
-    &__away{
+
+    &__away {
         grid-row: 2 / 3;
-        background-color: #a4d32211;
+        background-color: #a4d32200;
     }
 }
 
@@ -420,7 +483,8 @@ $color_select: #FF0035;
     }
 
     &__jersey {
-        display: flex;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
         position: relative;
         grid-column: 1 / 2;
         width: 2.3rem;
@@ -445,12 +509,14 @@ $color_select: #FF0035;
     }
 
     &__name {
-        grid-row: 2 / 3;
-        grid-column: 1 / 2;
         font-size: 0.58rem;
         font-weight: 600;
         color: #000000;
+        background-color: #dfdddd55;
+        width: 4rem;
+        border-radius: 0.5rem;
         text-shadow: 0 0 5px #ffffff;
+        justify-self: center;
 
         &--home {
             grid-row: 2 / 3;
@@ -469,5 +535,82 @@ $color_select: #FF0035;
         font-size: 0.55rem;
         color: #eed963;
         font-size: 0.5rem;
+    }
+
+    &__card {
+        position: absolute;
+
+    }
+
+    &__change {
+        position: absolute;
+        width: 1rem;
+        right: 0;
+        border-radius: 50%;
+        background-color: #e0d9d9;
+        border: 1px solid #00000088;
+    }
+
+    &__goal {
+        position: absolute;
+        width: 1rem;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+
+.card__yellow--true {
+    background-color: #ecc236;
+    width: 0.75rem;
+    height: 1rem;
+    border-radius: 0.12rem;
+    border: 1px solid #866e04;
+}
+
+.card__red--true {
+    background-color: #fc2b24;
+    width: 0.75rem;
+    height: 1rem;
+    border-radius: 0.12rem;
+    border: 1px solid #8f1b13;
+}
+
+.manager {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    gap: 0.35rem;
+    width: 13rem;
+    height: 4rem;
+    align-items: center;    
+    background-color: #0E131F00;
+
+    &__image {
+        width: 1.5rem;
+        background-color: #000000;
+        border-radius: 50%;
+
+
+    }
+
+    &__name {
+        font-size: 0.8rem;
+        background-color: #000000;
+        padding: 0 0.2rem;
+        border-radius: 0 0.5rem 0.5rem 0;
+        font-weight: 600;
+    }
+
+    &__home {
+        left: -6.6rem;
+        transform: rotate(90deg);
+        top: calc(50% - 1rem);
+    }
+
+    &__away {
+        right: -6.5rem;
+        transform: rotate(270deg);
+        bottom: calc(50% - 1rem);
     }
 }
