--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,7 +33,12 @@ $color_select: #FF0035;
 
     &__title {
         background-color: #FFFFFF10;
-        color: $color_select;
+        color: #7cac46;
+        width: 20rem;
+        border-radius: 4rem;
+        border: 1px solid #e9e9e915;
+        justify-self: center;
+        align-self: center;
     }
 
 }
