--- a/src/components/Match/Match.scss
+++ b/src/components/Match/Match.scss
@@ -15,7 +15,7 @@ $color_select: #FF0035;
     border-bottom: 1px solid #7ec929bb;
 
     &:hover {
-        transform: scale(1.05);
+        filter: brightness(150%);
     }
 
     &__teams {
