--- a/src/components/MatchLive/MatchLive.css
+++ b/src/components/MatchLive/MatchLive.css
@@ -1,4 +1,5 @@
 .matchlive {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   place-items: center;
@@ -122,7 +123,7 @@
 }
 
 .buttondetails {
-  position: relative;
+  position: absolute;
   display: flex;
   grid-row: 4/5;
   grid-column: 7/8;
@@ -182,7 +183,7 @@
 }
 .container__home {
   grid-row: 2/3;
-  grid-column: 2/span 2;
+  grid-column: 1/span 3;
   padding: 0;
 }
 @media (max-width: 500px) {
@@ -192,7 +193,7 @@
 }
 
 .container__away {
-  grid-column: 5/span 2;
+  grid-column: 5/span 3;
   grid-row: 2/3;
   padding: 0;
 }
