--- a/src/components/MatchLive/MatchLive.scss
+++ b/src/components/MatchLive/MatchLive.scss
@@ -5,6 +5,7 @@ $color_font: #8B939C;
 $color_select: #FF0035;
 
 .matchlive {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     place-items: center;
@@ -148,7 +149,7 @@ $color_select: #FF0035;
 }
 
 .buttondetails {
-    position: relative;
+    position: absolute;
     display: flex;
     grid-row: 4 / 5;
     grid-column: 7 / 8;
@@ -220,7 +221,7 @@ $color_select: #FF0035;
 
 .container__home {
     grid-row: 2 / 3;
-    grid-column: 2 / span 2;
+    grid-column: 1 / span 3;
     padding: 0;
 
     @media (max-width: 500px) {
@@ -229,7 +230,7 @@ $color_select: #FF0035;
 }
 
 .container__away {
-    grid-column: 5 / span 2;
+    grid-column: 5 / span 3;
     grid-row: 2 / 3;
     padding: 0;
 
