--- a/src/routes/Home/HomePage.scss
+++ b/src/routes/Home/HomePage.scss
@@ -8,6 +8,7 @@ $color_select: #FF0035;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 1rem;
     gap: 2rem;
     height: 90vh;
