--- a/src/components/Match/Match.css
+++ b/src/components/Match/Match.css
@@ -37,28 +37,28 @@
   color: #8da3fd;
 }
 .match__hour {
-  grid-column: 2/3;
+  grid-column: 2/span 2;
   grid-row: 3/4;
   font-size: 0.8rem;
   font-weight: 300;
-  justify-self: flex-end;
+  justify-self: center;
   color: #ecc377;
   padding: 0.1rem 0.4rem;
   border-radius: 0.8rem;
   background-color: #a4aa6944;
 }
 .match__city {
-  grid-column: 3/4;
-  grid-row: 3/4;
+  grid-column: 2/span 2;
+  grid-row: 4/5;
   font-size: 0.8rem;
   font-weight: 300;
   margin-left: 0.5rem;
-  justify-self: flex-start;
+  justify-self: center;
   color: #83e2e6;
 }
 .match__site {
   grid-column: 2/span 2;
-  grid-row: 4/5;
+  grid-row: 5/6;
   font-size: 0.8rem;
   font-weight: 300;
   color: #FF0035;
