--- a/src/routes/Betting/BettingPage.css
+++ b/src/routes/Betting/BettingPage.css
@@ -16,8 +16,9 @@
   background-color: #0E131F;
   border: 1px solid #8B939C;
   font-family: "Raleway", sans-serif;
-  transition: border-color 0.2s linear;
+  transition: all 0.2s linear;
   justify-self: flex-start;
+  color: #c4cacf;
   cursor: pointer;
 }
 .bettingpage__send:hover {
