--- a/src/components/MatchLive/MatchLive.css
+++ b/src/components/MatchLive/MatchLive.css
@@ -71,6 +71,9 @@
   justify-content: left;
   padding: 0;
 }
+.matchlive__minuteshome {
+  text-align: end;
+}
 .matchlive__container {
   display: flex;
   flex-direction: column;
@@ -185,10 +188,14 @@
   grid-row: 2/3;
   grid-column: 1/span 3;
   padding: 0;
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
 }
 @media (max-width: 500px) {
   .container__home {
     grid-column: 1/span 4;
+    align-items: flex-start;
   }
 }
 
@@ -200,5 +207,6 @@
 @media (max-width: 500px) {
   .container__away {
     grid-column: 5/span 3;
+    align-items: flex-end;
   }
 }
