--- a/src/components/MatchLive/MatchLive.scss
+++ b/src/components/MatchLive/MatchLive.scss
@@ -90,6 +90,10 @@ $color_select: #FF0035;
 
     }
 
+    &__minuteshome{
+        text-align: end;
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
@@ -223,9 +227,13 @@ $color_select: #FF0035;
     grid-row: 2 / 3;
     grid-column: 1 / span 3;
     padding: 0;
-
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    
     @media (max-width: 500px) {
         grid-column: 1 / span 4;
+        align-items: flex-start;
     }
 }
 
@@ -233,8 +241,9 @@ $color_select: #FF0035;
     grid-column: 5 / span 3;
     grid-row: 2 / 3;
     padding: 0;
-
+    
     @media (max-width: 500px) {
         grid-column: 5 / span 3;
+        align-items: flex-end;
     }
 }
